# Rust-Project

./: .env  Cargo.toml  diesel.toml
migrations/2024-06-01-205418_create_cards/: up.sql
migrations/2024-06-01-210511_add_pkmn_table/: up.sql
migrations/2024-06-22-032404_create_investments_table/: up.sql
src/: errors.rs  lib.rs  main.rs  models.rs  schema.rs
src/finance/: routes.rs
src/hobbies/: routes.rs
src/middlewares/: mod.rs  response_mapper.rs
src/utils/: errors.rs
